--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My GitHub Pages Website</title>
-  </head>
-  <body>
-    <h1>Welcome to my website!</h1>
-    <p>This is my first GitHub Pages website.</p>
-  </body>
+<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://thumbs.dreamstime.com/b/hand-pointer-cursor-mouse-do-not-clicking-linear-icon-symbol-form-pressing-crossed-out-red-stop-sign-touch-170204230.jpg"></a><br></p>
+<div style="color: red;">Created with <a href="https://wordtohtml.net/">WordToHTML.net</a> trial.</div>
 </html>
