--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://thumbs.dreamstime.com/b/hand-pointer-cursor-mouse-do-not-clicking-linear-icon-symbol-form-pressing-crossed-out-red-stop-sign-touch-170204230.jpg"></a><br></p>
+<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://i.imgur.com/DBvZjuJ.gif"></a><br></p>
 </html>
