--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
-<blockquote class="imgur-embed-pub" lang="en" data-id="F60dkNE" data-context="false" ><a href="//imgur.com/F60dkNE"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/q7QHuFyHsVo" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></p>
-
+<body style="color: rgb(0, 0, 0); background-color: rgb(209, 221, 209);">
+    <blockquote>
+        <h1 style="text-align: center;"><br>&quot;Bamboo - The Sustainable ******** *** a Better Future&quot;</h1>
+    </blockquote>
+    <hr>
+    <p><br></p>
+    <h3>Aim:</h3>
+    <ul>
+        <li>
+            <p>To educate people about the many benefits ** bamboo as a *********** material</p>
+        </li>
+        <li>
+            <p>To ********* the use of bamboo in construction, furniture, and ***** industries</p>
+        </li>
+        <li>
+            <p>To promote sustainable living and eco-friendly products</p>
+        </li>
+        <li>
+            <p>** raise awareness ***** the importance of protecting our planet for future generations</p>
+        </li>
+    </ul>
+    <hr>
+    <p style="text-align: center;"><iframe allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" class="imgur-embed-iframe-pub imgur-embed-iframe-pub-F60dkNE-false-540" scrolling="no" src="https://imgur.com/F60dkNE/embed?context=false&ref=https%3A%2F%2Fwordtohtml.net%2F&w=540" id="imgur-embed-iframe-pub-F60dkNE" style="height: 500px; width: 540px; margin: 10px 0px; padding: 0px;"></iframe></p>
+    <hr>
+    <p><br></p>
+    <script async="" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q7QHuFyHsVo" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></p>
+    <p><br></p>
+</body>
