--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <body style="color: rgb(0, 0, 0); background-color: rgb(209, 221, 209);">
     <blockquote>
-        <h1 style="text-align: center;"><br>&quot;Bamboo - The Sustainable ******** *** a Better Future&quot;</h1>
+        <h1 style="text-align: center;"><br>&quot;Bamboo - The Sustainable Solution for a Better Future&quot;</h1>
     </blockquote>
     <hr>
     <p><br></p>
     <h3>Aim:</h3>
     <ul>
         <li>
-            <p>To educate people about the many benefits ** bamboo as a *********** material</p>
+            <p>To educate people about the many benefits of bamboo as a sustainable material</p>
         </li>
         <li>
-            <p>To ********* the use of bamboo in construction, furniture, and ***** industries</p>
+            <p>To encourage the use of bamboo in construction, furniture, and other industries</p>
         </li>
         <li>
             <p>To promote sustainable living and eco-friendly products</p>
         </li>
         <li>
-            <p>** raise awareness ***** the importance of protecting our planet for future generations</p>
+            <p>** raise awareness about the importance of protecting our planet for future generations</p>
         </li>
     </ul>
     <hr>
