--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>To promote sustainable living and eco-friendly products</p>
         </li>
         <li>
-            <p>** raise awareness about the importance of protecting our planet for future generations</p>
+            <p>To raise awareness about the importance of protecting our planet for future generations</p>
         </li>
     </ul>
     <hr>
