--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Background Scroll Image</title>
+	<style>
+		body {
+			background-image: url('https://i.imgur.com/WlIBJt6.png');
+			background-repeat: repeat-y;
+			background-size: cover;
+			background-attachment: fixed;
+		}
+	</style>
+</head>
 <body style="color: rgb(0, 0, 0); background-color: rgb(209, 221, 209);">
     <blockquote>
-        <h1 style="text-align: center;"><br>&quot;Bamboo - The Sustainable Solution for a Better Future&quot;</h1>
-    </blockquote>
-    <hr>
-    <p><br></p>
-    <h3>Aim:</h3>
-    <ul>
-        <li>
-            <p>To educate people about the many benefits of bamboo as a sustainable material</p>
-        </li>
-        <li>
-            <p>To encourage the use of bamboo in construction, furniture, and other industries</p>
-        </li>
-        <li>
-            <p>To promote sustainable living and eco-friendly products</p>
-        </li>
-        <li>
-            <p>To raise awareness about the importance of protecting our planet for future generations</p>
-        </li>
-    </ul>
-    <hr>
+        <h1 style="text-align: center;"> <img alt="" src="https://i.imgur.com/Vff51L4.gif">
+           <p><a href="https://i.imgur.com/Vff51L4.gif">
+        
+       
+   <p><a href="https://i.imgur.com/zjKAmmp.png"><img alt="" src="https://i.imgur.com/zjKAmmp.png" style="height:250px; width:750px" /></a></p>
+   <hr>
     <p style="text-align: center;"><iframe allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" class="imgur-embed-iframe-pub imgur-embed-iframe-pub-F60dkNE-false-540" scrolling="no" src="https://imgur.com/F60dkNE/embed?context=false&ref=https%3A%2F%2Fwordtohtml.net%2F&w=540" id="imgur-embed-iframe-pub-F60dkNE" style="height: 500px; width: 540px; margin: 10px 0px; padding: 0px;"></iframe></p>
     <hr>
     <p><br></p>
@@ -27,3 +26,4 @@
     <p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q7QHuFyHsVo" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></p>
     <p><br></p>
 </body>
+</html>
