--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <hr>
     <p><br></p>
     <script async="" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-    <p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q7QHuFyHsVo" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></p>
+    <p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q7QHuFyHsVo?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></p>
     <p><br></p>
 </body>
 </html>
