--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
            <p><a href="https://i.imgur.com/Vff51L4.gif">
         
        
- <!--   <p><a href="https://i.imgur.com/zjKAmmp.png"><img alt="" src="https://i.imgur.com/zjKAmmp.png" style="height:250px; width:750px" /></a></p> -->
+  <p><a href="https://i.imgur.com/zjKAmmp.png"><img alt="" src="https://i.imgur.com/zjKAmmp.png" style="height:250px; width:750px" /></a></p> 
 
   
-<!--    <script async="" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+   <script async="" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     <p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q7QHuFyHsVo?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allowfullscreen=""></iframe></p>
-    <p><br></p> -->
+    <p><br></p> 
 
     <p style="text-align: center;"><a href=" https://i.imgur.com/F60dkNE.png "><img alt="" src="https://i.imgur.com/F60dkNE.png"></p>
    
