--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Background Scroll Image</title>
+	<title> bamboo </title>
 	<style>
 		body {
 			background-image: url('https://i.imgur.com/WlIBJt6.png');
